<resources>
    <string name="app_name">MovieRama</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Search MovieRama</string>
    <string name="content_description">Content description</string>
    <string name="description">Description</string>
    <string name="director">Director</string>
    <string name="cast">Cast</string>
    <string name="similar_movies">Similar Movies</string>
    <string name="reviews">Reviews</string>
    <string name="loading">Loading</string>
    <string name="header_movie_results">Movies Found</string>
    <string name="header_movies_exhausted">No results</string>
</resources>